# openbb-chat

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  docker-pr-build.yaml  docker.yaml  release.yaml  static.yml  test.yml
0.0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.0.4/reference/SUMMARY/: index.html
0.0.4/reference/openbb_chat/: index.html
0.0.4/reference/openbb_chat/classifiers/: index.html
0.0.4/reference/openbb_chat/classifiers/abstract_zeroshot_classifier/: index.html
0.0.4/reference/openbb_chat/classifiers/roberta/: index.html
0.0.4/reference/openbb_chat/classifiers/stransformer/: index.html
0.0.4/reference/openbb_chat/data/: index.html
0.0.4/reference/openbb_chat/data/components/: index.html
0.0.4/reference/openbb_chat/data/mnist_datamodule/: index.html
0.0.4/reference/openbb_chat/eval/: index.html
0.0.4/reference/openbb_chat/llms/: index.html
0.0.4/reference/openbb_chat/llms/guidance_wrapper/: index.html
0.0.4/reference/openbb_chat/models/: index.html
0.0.4/reference/openbb_chat/models/components/: index.html
0.0.4/reference/openbb_chat/models/components/simple_dense_net/: index.html
0.0.4/reference/openbb_chat/models/mnist_module/: index.html
0.0.4/reference/openbb_chat/train/: index.html
0.0.4/reference/openbb_chat/utils/: index.html
0.0.4/reference/openbb_chat/utils/instantiators/: index.html
0.0.4/reference/openbb_chat/utils/logging_utils/: index.html
0.0.4/reference/openbb_chat/utils/pylogger/: index.html
0.0.4/reference/openbb_chat/utils/rich_utils/: index.html
0.0.4/reference/openbb_chat/utils/utils/: index.html
0.0.4/search/: search_index.json
configs/data/: mnist.yaml
configs/model/: mnist.yaml
docs/: gen_ref_pages.py  index.md
latest/: 404.html  index.html
latest/reference/SUMMARY/: index.html
latest/reference/openbb_chat/: index.html
latest/reference/openbb_chat/classifiers/: index.html
latest/reference/openbb_chat/classifiers/abstract_zeroshot_classifier/: index.html
latest/reference/openbb_chat/classifiers/roberta/: index.html
latest/reference/openbb_chat/classifiers/stransformer/: index.html
latest/reference/openbb_chat/data/: index.html
latest/reference/openbb_chat/data/components/: index.html
latest/reference/openbb_chat/data/mnist_datamodule/: index.html
latest/reference/openbb_chat/eval/: index.html
latest/reference/openbb_chat/llms/: index.html
latest/reference/openbb_chat/llms/guidance_wrapper/: index.html
latest/reference/openbb_chat/models/: index.html
latest/reference/openbb_chat/models/components/: index.html
latest/reference/openbb_chat/models/components/simple_dense_net/: index.html
latest/reference/openbb_chat/models/mnist_module/: index.html
latest/reference/openbb_chat/train/: index.html
latest/reference/openbb_chat/utils/: index.html
latest/reference/openbb_chat/utils/instantiators/: index.html
latest/reference/openbb_chat/utils/logging_utils/: index.html
latest/reference/openbb_chat/utils/pylogger/: index.html
latest/reference/openbb_chat/utils/rich_utils/: index.html
latest/reference/openbb_chat/utils/utils/: index.html
openbb_chat/: eval.py  train.py
openbb_chat/classifiers/: abstract_zeroshot_classifier.py  roberta.py  stransformer.py
openbb_chat/data/: mnist_datamodule.py
openbb_chat/kernels/: __init__.py  auto_llama_index.py  auto_multistep_query_engine.py
openbb_chat/llms/: __init__.py  guidance_wrapper.py
openbb_chat/retrievers/: hybrid_or_retriever.py  vector_bm25_retriever.py
openbb_chat/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
scripts/: schedule.sh
tests/: test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tests/classifiers/: test_roberta.py  test_stransformers.py
tests/kernels/: test_auto_llama_index.py  test_auto_multistep_query_engine.py
tests/llms/: test_chat_model_llm_iface.py  test_guidance_wrapper.py
