[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "openbb-chat"
version = "0.0.3"
description = "Chat interface for OpenBB"
authors = ["GPTStonks <gptstonks@gmail.com>"]
readme = "README.md"
packages = [{include = "openbb_chat"}]

[tool.poetry.dependencies]
python = "3.10.*"
openbb = { version = "3.2.2", python = "3.10.*" }
torch = [
	{ url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp311-cp311-linux_x86_64.whl", python = "3.11.*", markers = "sys_platform == 'linux'" },
	{ url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl", python = "3.10.*", markers = "sys_platform == 'linux'" },
  { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp311-cp311-win_amd64.whl", python = "3.11.*", markers = "sys_platform == 'win32'" },
  { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-win_amd64.whl", python = "3.10.*", markers = "sys_platform == 'win32'" },
]
torchvision = [
	{ url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp311-cp311-linux_x86_64.whl", python = "3.11.*", markers = "sys_platform == 'linux'" },
	{ url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl", python = "3.10.*", markers = "sys_platform == 'linux'" },
  { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp311-cp311-win_amd64.whl", python = "3.11.*", markers = "sys_platform == 'win32'" },
  { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-win_amd64.whl", python = "3.10.*", markers = "sys_platform == 'win32'" },
]
lightning = ">=2.0.0"
torchmetrics = ">=0.11.4"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
wandb = "^0.15.5"
pyrootutils = "<1.0.4"
pre-commit = "^3.3.3"
rich = ">=12.6.0,<13.0.0"
pytest = "^7.4.0"
transformers = {extras = ["torch"], version = "^4.31.0"}
peft = "^0.4.0"
einops = "^0.6.1"
accelerate = "^0.21.0"
bitsandbytes = "^0.41.1"
sentencepiece = "^0.1.99"
guidance = "^0.0.64"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbb-chat"
version = "0.0.3"
description = "Deep learning package to support the chat interface for OpenBB"
authors = [
  { name="GPTStonks", email="gptstonks@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openbb==3.2.2",
  "torch==2.*",
  "torchvision==0.*",
  "lightning>=2.0.0",
  "torchmetrics>=0.11.4",
  "hydra-core==1.*",
  "hydra-colorlog==1.*",
  "hydra-optuna-sweeper==1.*",
  "wandb>=0.15.5",
  "pyrootutils<1.0.4",
  "pre-commit>=3.3.3",
  "rich>=12.6.0,<13.0.0",
  "pytest>=7.4.0",
  "transformers>=4.31.0",
  "peft>=0.4.0",
  "einops>=0.6.1",
  "accelerate>=0.21.0",
  "bitsandbytes>=0.41.1",
  "sentencepiece>=0.1.99",
  "guidance>=0.0.64",
]

[project.urls]
"Homepage" = "https://github.com/GPTStonks/openbb-chat"
"Bug Tracker" = "https://github.com/GPTStonks/openbb-chat/issues"
