[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbb-chat"
version = "0.0.10"
description = "Deep learning package to add chat capabilities to OpenBB"
authors = [
  { name="GPTStonks", email="gptstonks@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.*",
    "pyrootutils>=1.0.4",
    "pre-commit>=3.3.3",
    "rich>=12.6.0,<13.0.0",
    "transformers>=4.33.0",
    "peft>=0.5.0",
    "einops>=0.6.1",
    "accelerate>=0.22.0",
    "bitsandbytes>=0.41.1",
    "sentencepiece>=0.1.99",
    "guidance>=0.0.64",
    "auto-gptq>=0.4.2",
    "optimum>=1.12.0",
    "rank-bm25>=0.2.2",
    "llama-index>=0.10.13",
    "langchain>=0.0.353",
    "llama-index-llms-huggingface>=0.1.3",
    "llama-index-llms-openai>=0.1.6",
    "llama-index-retrievers-bm25>=0.1.3",
    "llama-index-embeddings-huggingface>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    "hydra-core==1.*",
    "hydra-colorlog==1.*",
    "hydra-optuna-sweeper==1.*",
    "wandb>=0.15.5",
    "ipykernel>=6.29.3",
]
tests = [
    "pytest>=8.0.2",
    "sentence-transformers>=2.2.2",
    "pytest-cov[toml]>=4.1.0",
    "torchvision>=0.17.1",
    "pytest-asyncio>=0.23.5",
    "duckduckgo-search>=4.5.0",
    "wikipedia>=1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/GPTStonks/openbb-chat"
"Bug Tracker" = "https://github.com/GPTStonks/openbb-chat/issues"
